# DiffDrive_Hyundai_Kona_ROS2_Gazebo_Harmonic

./: CMakeLists.txt  README.md  package.xml
launch/: kona.launch.py
meshes/: base_link.STL  left_back_wheel.STL  left_front_wheel.STL  right_back_wheel.STL  rigth_front_wheel.STL
urdf/: kona.urdf.xacro
