<?xml version="1.0"?>
<package format="3">
  <name>hyundai_kona</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="code@todo.todo">code</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <depend>gazebo_ros_pkgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Adding the model path for Gazebo -->
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
